[package]
name = "landlord"
version = "0.2.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "publib"
path = "src/publib/lib.rs"

[[bin]]
name = "landlord"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
cargo_metadata = "0.14.2"
clap = "2.34.0"
rood = { version = "0.5.0", features = ["serialization"] }
semver = { version = "1.0.7", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
sha2 = "0.10.2"
toml = "0.5.9"
toml_edit = "0.14.2"
