[package]
name = "landlord"
version = "0.2.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "publib"
path = "src/publib/lib.rs"

[[bin]]
name = "landlord"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
cargo_metadata = "0.15.0"
clap = "3.2.14"
rood = { version = "0.5.1", features = ["serialization"] }
semver = { version = "1.0.12", features = ["serde"] }
serde = { version = "1.0.138", features = ["derive"] }
sha2 = "0.10.2"
toml = "0.5.9"
toml_edit = "0.14.4"
